--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,13 @@ html {
 body {
   background-color: var(--color3);
   padding-bottom: 20px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  overflow-y: scroll; 
+}
+
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .content {
